# ghostpost_backend

./: README.md  db.sqlite3  manage.py  pyproject.toml
ghostpostApp/: admin.py  apps.py  models.py  serializers.py  views.py
ghostpostApp/migrations/: 0001_initial.py  0002_auto_20201001_1753.py
ghostpostProject/: asgi.py  settings.py  urls.py  wsgi.py
